--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
   <body class="page">
     <header class="header decorated-zone">
       <p class="header-decorated-text" aria-hidden="true">REC</p>
+      <div
+        class="corner-decore corner-decore-right-up"
+        aria-hidden="true"
+      ></div>
+      <div
+        class="corner-decore corner-decore-left-down"
+        aria-hidden="true"
+      ></div>
       <nav class="header__theme-menu">
         <ul class="header__theme-menu-list">
           <li class="header__theme-menu-item">
@@ -46,160 +54,215 @@
         </ul>
       </nav>
       <h1 class="header__title">no focus</h1>
-      <p class="header__text-block title-decore">
-        Что делать, когда не&nbsp;можешь делать ничего
-        <br />Или почему нам так сложно сконцентрироваться, особенно когда очень
-        надо
-      </p>
+      <div class="header__text-block title-decore">
+        <p>Что делать, когда не&nbsp;можешь делать ничего&ensp;</p>
+        <p>
+          Или почему нам так сложно сконцентрироваться, особенно когда очень
+          надо
+        </p>
+      </div>
     </header>
     <main class="main-content">
-      <section class="two-columns-section">
-        <h2 class="heading heading-accent-color">
-          Почему сосредоточиться так сложно
-        </h2>
-        <article class="content-card">
-          <h3 class="heading title-decore">Многозадачность</h3>
-          <p class="content-card__text">
-            Особенно сложно сосредоточиться, когда задач много и все они —
-            важные. Где же легендарная многозадачность, когда она так нужна вам
-            (и всем нанимающим менеджерам этого мира)? А дело в том, что её
-            просто не существует. Исследователи
-            <span class="text-link">выяснили</span>, что мозгу тяжело
-            концентрироваться даже на двух делах одновременно. А когда в поле
-            внимания попадает несколько важных задач, организм паникует и
-            выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы
-            работаем невнимательно: ошибаемся и быстро устаём.
-          </p>
-        </article>
-
-        <article class="content-card">
-          <h3 class="heading title-decore">Дофамин</h3>
-          <p class="content-card__text">
-            С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей
-            невозможности сосредоточиться замешана и полная противоположность
-            стрессу — дофамин. Это вещество участвует в системе вознаграждения
-            мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на
-            что-то более «приятное» для мозгов. Например, смотрим лайки в
-            соцсетях. В это время и выделяется дофамин — и мы чувствуем
-            удовольствие. Получается замкнутый круг: чем больше отвлекаешься,
-            тем больше удовольствия получаешь.
-          </p>
-        </article>
-      </section>
-      <section class="three-columns-section">
-        <h2 class="heading heading-accent-color">
-          Что снижает концентрацию внимания?
-        </h2>
-        <article class="content-card">
-          <h3 class="heading title-decore">Многозадачность</h3>
-          <p class="content-card__text">
-            Как концентрация может снижаться из-за… концентрации? Любая
-            стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш
-            мозг постоянно «сканировать» окружающую среду на предмет опасности.
-            Например, читать новости вместо работы. Но быть собранными всё время
-            — невозможно. Концентрация — мышца, и она может не выдержать, если
-            не давать ей отдохнуть.
-          </p>
-        </article>
-        <article class="content-card">
-          <h3 class="heading title-decore">Еда</h3>
-          <p class="content-card__text">
-            «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
-            доставляют в мозг энергию и помогают ему лучше работать. Но уходит
-            эта энергия также быстро, как и приходит. А мы в результате попадаем
-            на «углеводные качели»: как только действие «быстрых углеводов»
-            заканчивается, мы чувствуем усталость и сонливость. И хотим ещё
-            больше быстрых углеводов.
-          </p>
-        </article>
-        <article class="content-card">
-          <h3 class="heading title-decore">Гаджеты</h3>
-          <p class="content-card__text">
-            Да-да, это та самая ситуация, когда на экране ноутбука — код, в
-            наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными
-            утятами. В результате мозг пытается переключиться с одной задачи на
-            другую — и просто не может. А чтобы вернуться к состоянию полной
-            концентрации, человеку в среднем нужно 20 минут. Вот и получается,
-            что чем больше времени мы проводим в гаджетах, тем больше времени
-            затем нужно, чтобы вернуться к работе.
-          </p>
-        </article>
-      </section>
-      <section class="section-six-rows">
-        <h2 class="heading heading-accent-color">
-          Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
-          секунд)
-        </h2>
-        <h3 class="heading title-decore">
-          5 простых (на самом деле не очень) советов
-        </h3>
-        <article class="content-card">
-          <h3 class="heading title-decore">Представьте небо и облака</h3>
-          <p class="content-card__text">
-            Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
-            успокоиться. Ведь часто именно тревожные мысли о сложных задачах как
-            раз и мешают эти сложные задачи делать. В такие моменты можно
-            закрыть глаза и представить, что чистое небо — это вы, а облака —
-            тревожные мысли. И сколько бы их ни было — ясное небо всегда будет
-            где-то там, за тучами, и никуда не денется. Это упражнение поможет
-            вернуться в настоящий момент, а не волноваться о потенциальных
-            проблемах из будущего.
-          </p>
-        </article>
-        <article class="content-card">
-          <h3 class="heading title-decore">Включите музыку</h3>
-          <p class="content-card__text">
-            Но не любую, и не любимую. Любимая может быть связана с сильными
-            положительными эмоциями, которые тоже очень сильно отвлекают.
-            Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще
-            попробовать включить плейлист в «белым шумом» или нейромузыкой.
-          </p>
-        </article>
-        <article class="content-card">
-          <h3 class="heading title-decore">Прогуляйтесь</h3>
-          <p class="content-card__text">
-            Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
-            показал, что созерцание природы повышает концентрацию, в то время
-            как после просмотра городских пейзажей она наоборот понижается.
-            Можно совместить прогулку с физическими упражнениями или бегом — так
-            в мозг поступит ещё больше кислорода и он будет лучше работать. Но и
-            простая двадцатиминутная прогулка — тоже отличный вариант.
-          </p>
-        </article>
-        <article class="content-card">
-          <h3 class="heading title-decore">Хорошо ешьте</h3>
-          <p class="content-card__text">
-            Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
-            которые препятствуют резким скачкам сахара в крови. Например, с
-            высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица,
-            фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
-          </p>
-        </article>
-        <article class="content-card">
-          <h3 class="heading title-decore">Читайте</h3>
-          <p class="content-card__text">
-            Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы
-            прочитать пост в соцсети, достаточно нескольких минут или даже
-            секунд. А вот интересная книга способна затянуть и на несколько
-            часов и круто тренирует направленное внимание.
-          </p>
-        </article>
-      </section>
-      <section class="gallery">
-        <h3 class="heading title-decore">А можно в картинках?</h3>
-        <div class="gallery__container">
-          <img class="img-item-1" src="/images/sunset.png" alt="sunset">
-          <img class="img-item-2" src="/images/ice-cream.png" alt="ice-cream">
-          <img class="img-item-3" src="/images/tape.png" alt="tape">
-          <img class="img-item-4" src="/images/books.png" alt="books">
-          <img class="img-item-5" src="/images/street.png" alt="street">
+      <section class="content-cards two-columns">
+        <div class="content-cards__header">
+          <h2 class="heading heading-accent-color">
+            Почему сосредоточиться так сложно
+          </h2>
         </div>
+        <div class="content-cards__container">
+          <article class="content-card">
+            <h3 class="heading title-decore">Многозадачность</h3>
+            <p class="content-card__text">
+              Особенно сложно сосредоточиться, когда задач много и все они —
+              важные. Где же легендарная многозадачность, когда она так нужна
+              вам (и всем нанимающим менеджерам этого мира)? А дело в том, что
+              её просто не существует. Исследователи
+              <a
+                class="text-link"
+                href="https://dana.org/article/multicosts-of-multitasking/"
+                target="_blank"
+              >
+                выяснили </a
+              >, что мозгу тяжело концентрироваться даже на двух делах
+              одновременно. А когда в поле внимания попадает несколько важных
+              задач, организм паникует и выделяет кортизол и адреналин —
+              «гормоны стресса». Из-за этого мы работаем невнимательно:
+              ошибаемся и быстро устаём.
+            </p>
+          </article>
+          <article class="content-card">
+            <h3 class="heading title-decore">Дофамин</h3>
+            <p class="content-card__text">
+              С гормонами стресса всё понятно, но дальше — ещё интереснее. В
+              нашей невозможности сосредоточиться замешана и полная
+              противоположность стрессу — дофамин. Это вещество участвует в
+              системе вознаграждения мозга. Причём тут он? Мы часто отвлекаемся
+              от важной задачи на что-то более «приятное» для мозгов. Например,
+              смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы
+              чувствуем удовольствие. Получается замкнутый круг: чем больше
+              отвлекаешься, тем больше удовольствия получаешь.
+            </p>
+          </article>
+        </div>
+      </section>
+
+      <section class="content-cards">
+        <div class="content-cards__header">
+          <h2 class="heading heading-accent-color three-columns-header">
+            Что снижает концентрацию внимания?
+          </h2>
+        </div>
+        <div class="content-cards__container three-columns">
+          <article class="content-card">
+            <h3 class="heading title-decore">Многозадачность</h3>
+            <p class="content-card__text">
+              Как концентрация может снижаться из-за… концентрации? Любая
+              стрессовая ситуация (и резко меняющийся мир в целом) заставляет
+              наш мозг постоянно «сканировать» окружающую среду на предмет
+              опасности. Например, читать новости вместо работы. Но быть
+              собранными всё время — невозможно. Концентрация — мышца, и она
+              может не выдержать, если не давать ей отдохнуть.
+            </p>
+          </article>
+          <article class="content-card">
+            <h3 class="heading title-decore">Еда</h3>
+            <p class="content-card__text">
+              «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
+              доставляют в мозг энергию и помогают ему лучше работать. Но уходит
+              эта энергия также быстро, как и приходит. А мы в результате
+              попадаем на «углеводные качели»: как только действие «быстрых
+              углеводов» заканчивается, мы чувствуем усталость и сонливость. И
+              хотим ещё больше быстрых углеводов.
+            </p>
+          </article>
+          <article class="content-card">
+            <h3 class="heading title-decore">Гаджеты</h3>
+            <p class="content-card__text">
+              Да-да, это та самая ситуация, когда на экране ноутбука — код, в
+              наушниках — подкаст, а на компьютере фоном — ещё и видео с
+              забавными утятами. В результате мозг пытается переключиться с
+              одной задачи на другую — и просто не может. А чтобы вернуться к
+              состоянию полной концентрации, человеку в среднем нужно 20 минут.
+              Вот и получается, что чем больше времени мы проводим в гаджетах,
+              тем больше времени затем нужно, чтобы вернуться к работе.
+            </p>
+          </article>
+        </div>
+      </section>
+
+      <section class="content-cards two-columns">
+        <div class="content-cards__header">
+          <h2 class="heading heading-accent-color">
+            Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
+            секунд)
+          </h2>
+        </div>
+        <div class="content-cards__container">
+          <h4 class="heading title-decore">
+            5 простых (на самом деле не очень) советов
+          </h4>
+          <article class="content-card">
+            <h3 class="heading title-decore heading-weight-regular">
+              Представьте небо и облака
+            </h3>
+            <p class="content-card__text">
+              Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
+              успокоиться. Ведь часто именно тревожные мысли о сложных задачах
+              как раз и мешают эти сложные задачи делать. В такие моменты можно
+              закрыть глаза и представить, что чистое небо — это вы, а облака —
+              тревожные мысли. И сколько бы их ни было — ясное небо всегда будет
+              где-то там, за тучами, и никуда не денется. Это упражнение поможет
+              вернуться в настоящий момент, а не волноваться о потенциальных
+              проблемах из будущего.
+            </p>
+          </article>
+
+          <article class="content-card">
+            <h3 class="heading title-decore heading-weight-regular">
+              Включите музыку
+            </h3>
+            <p class="content-card__text">
+              Но не любую, и не любимую. Любимая может быть связана с сильными
+              положительными эмоциями, которые тоже очень сильно отвлекают.
+              Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще
+              попробовать включить плейлист в «белым шумом» или нейромузыкой.
+            </p>
+          </article>
+          <article class="content-card">
+            <h3 class="heading title-decore heading-weight-regular">
+              Прогуляйтесь
+            </h3>
+            <p class="content-card__text">
+              Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
+              <a
+                class="text-link"
+                href="https://dana.org/article/multicosts-of-multitasking/"
+                target="_blank"
+              >
+                показал </a
+              >, что созерцание природы повышает концентрацию, в то время как
+              после просмотра городских пейзажей она наоборот понижается. Можно
+              совместить прогулку с физическими упражнениями или бегом — так в
+              мозг поступит ещё больше кислорода и он будет лучше работать. Но и
+              простая двадцатиминутная прогулка — тоже отличный вариант.
+            </p>
+          </article>
+          <article class="content-card">
+            <h3 class="heading title-decore heading-weight-regular">
+              Хорошо ешьте
+            </h3>
+            <p class="content-card__text">
+              Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
+              которые препятствуют резким скачкам сахара в крови. Например, с
+              высоким содержанием клетчатки: овощи, ягоды, бобовые (нут,
+              чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
+            </p>
+          </article>
+
+          <article class="content-card">
+            <h3 class="heading title-decore heading-weight-regular">Читайте</h3>
+            <p class="content-card__text">
+              Настоящие бумажные книги. Это правда помогает с концентрацией:
+              чтобы прочитать пост в соцсети, достаточно нескольких минут или
+              даже секунд. А вот интересная книга способна затянуть и на
+              несколько часов и круто тренирует направленное внимание.
+            </p>
+          </article>
+        </div>
+      </section>
+
+      <section class="gallery">
+        <h4 class="heading title-decore">А можно в картинках?</h4>
+        <ul class="gallery__container">
+          <li class="grid-item img1">
+            <img src="/images/sunset.png" alt="sunset" />
+          </li>
+          <li class="grid-item img2">
+            <img src="/images/ice-cream.png" alt="ice-cream" />
+          </li>
+          <li class="grid-item img3">
+            <img src="/images/tape.png" alt="tape" />
+          </li>
+          <li class="grid-item img4">
+            <img src="/images/books.png" alt="books" />
+          </li>
+          <li class="grid-item img5">
+            <img src="/images/street.png" alt="street" />
+          </li>
+        </ul>
       </section>
     </main>
     <footer class="footer">
-      focus
-    </footer>
-
+      <div
+      class="corner-decore corner-decore-right-up"
+      aria-hidden="true"
+    ></div>
+    <div
+      class="corner-decore corner-decore-left-down"
+      aria-hidden="true"
+    ></div>
+    focus
+  </footer>
     <script src="./scripts/script.js"></script>
   </body>
 </html>
