--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
         <div class="content-cards__container">
           <article class="content-card">
-            <h3 class="heading title-decore">Многозадачность</h3>
+            <h4 class="heading title-decore">Многозадачность</h4>
             <p class="content-card__text">
               Особенно сложно сосредоточиться, когда задач много и все они —
               важные. Где же легендарная многозадачность, когда она так нужна
@@ -91,7 +91,7 @@
             </p>
           </article>
           <article class="content-card">
-            <h3 class="heading title-decore">Дофамин</h3>
+            <h4 class="heading title-decore">Дофамин</h4>
             <p class="content-card__text">
               С гормонами стресса всё понятно, но дальше — ещё интереснее. В
               нашей невозможности сосредоточиться замешана и полная
@@ -114,7 +114,7 @@
         </div>
         <div class="content-cards__container three-columns">
           <article class="content-card">
-            <h3 class="heading title-decore">Многозадачность</h3>
+            <h4 class="heading title-decore">Многозадачность</h4>
             <p class="content-card__text">
               Как концентрация может снижаться из-за… концентрации? Любая
               стрессовая ситуация (и резко меняющийся мир в целом) заставляет
@@ -125,7 +125,7 @@
             </p>
           </article>
           <article class="content-card">
-            <h3 class="heading title-decore">Еда</h3>
+            <h4 class="heading title-decore">Еда</h4>
             <p class="content-card__text">
               «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
               доставляют в мозг энергию и помогают ему лучше работать. Но уходит
@@ -136,7 +136,7 @@
             </p>
           </article>
           <article class="content-card">
-            <h3 class="heading title-decore">Гаджеты</h3>
+            <h4 class="heading title-decore">Гаджеты</h4>
             <p class="content-card__text">
               Да-да, это та самая ситуация, когда на экране ноутбука — код, в
               наушниках — подкаст, а на компьютере фоном — ещё и видео с
@@ -162,9 +162,9 @@
             5 простых (на самом деле не очень) советов
           </h4>
           <article class="content-card">
-            <h3 class="heading title-decore heading-weight-regular">
+            <h4 class="heading title-decore heading-weight-regular">
               Представьте небо и облака
-            </h3>
+            </h4>
             <p class="content-card__text">
               Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
               успокоиться. Ведь часто именно тревожные мысли о сложных задачах
@@ -176,11 +176,10 @@
               проблемах из будущего.
             </p>
           </article>
-
           <article class="content-card">
-            <h3 class="heading title-decore heading-weight-regular">
+            <h4 class="heading title-decore heading-weight-regular">
               Включите музыку
-            </h3>
+            </h4>
             <p class="content-card__text">
               Но не любую, и не любимую. Любимая может быть связана с сильными
               положительными эмоциями, которые тоже очень сильно отвлекают.
@@ -189,9 +188,9 @@
             </p>
           </article>
           <article class="content-card">
-            <h3 class="heading title-decore heading-weight-regular">
+            <h4 class="heading title-decore heading-weight-regular">
               Прогуляйтесь
-            </h3>
+            </h4>
             <p class="content-card__text">
               Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
               <a
@@ -208,9 +207,9 @@
             </p>
           </article>
           <article class="content-card">
-            <h3 class="heading title-decore heading-weight-regular">
+            <h4 class="heading title-decore heading-weight-regular">
               Хорошо ешьте
-            </h3>
+            </h4>
             <p class="content-card__text">
               Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
               которые препятствуют резким скачкам сахара в крови. Например, с
@@ -220,7 +219,7 @@
           </article>
 
           <article class="content-card">
-            <h3 class="heading title-decore heading-weight-regular">Читайте</h3>
+            <h4 class="heading title-decore heading-weight-regular">Читайте</h4>
             <p class="content-card__text">
               Настоящие бумажные книги. Это правда помогает с концентрацией:
               чтобы прочитать пост в соцсети, достаточно нескольких минут или
@@ -232,7 +231,7 @@
       </section>
 
       <section class="gallery">
-        <h4 class="heading title-decore">А можно в картинках?</h4>
+        <h2 class="heading title-decore">А можно в картинках?</h2>
         <ul class="gallery__container">
           <li class="grid-item img1">
             <img src="/images/sunset.png" alt="sunset" />
@@ -245,6 +244,9 @@
           </li>
           <li class="grid-item img4">
             <img src="/images/books.png" alt="books" />
+          </li>
+          <li class="grid-item img5">
+            <img src="/images/street.png" alt="street" />
           </li>
           <li class="grid-item img5">
             <img src="/images/street.png" alt="street" />
