fix html and css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="color-scheme" content="dark light" />
+    <meta name="color-scheme" content="dark light"> 
     <title>Сложно сосредоточиться</title>
     <link rel="icon" href="./images/favicon.ico" sizes="any" />
     <link rel="icon" href="./images/favicon.svg" type="image/svg+xml" />
@@ -63,15 +63,15 @@
       </div>
     </header>
     <main class="main-content">
-      <section class="content-cards two-columns">
+      <section class="content-cards">
         <div class="content-cards__header">
-          <h2 class="heading heading-accent-color">
+          <h2 class="heading heading-accent-color heading-inline-size">
             Почему сосредоточиться так сложно
           </h2>
         </div>
         <div class="content-cards__container">
           <article class="content-card">
-            <h4 class="heading title-decore">Многозадачность</h4>
+            <h3 class="heading title-decore">Многозадачность</h3>
             <p class="content-card__text">
               Особенно сложно сосредоточиться, когда задач много и все они —
               важные. Где же легендарная многозадачность, когда она так нужна
@@ -91,7 +91,7 @@
             </p>
           </article>
           <article class="content-card">
-            <h4 class="heading title-decore">Дофамин</h4>
+            <h3 class="heading title-decore">Дофамин</h3>
             <p class="content-card__text">
               С гормонами стресса всё понятно, но дальше — ещё интереснее. В
               нашей невозможности сосредоточиться замешана и полная
@@ -108,13 +108,13 @@
 
       <section class="content-cards">
         <div class="content-cards__header">
-          <h2 class="heading heading-accent-color three-columns-header">
+          <h2 class="heading heading-accent-color heading-inline-size">
             Что снижает концентрацию внимания?
           </h2>
         </div>
-        <div class="content-cards__container three-columns">
+        <div class="content-cards__container">
           <article class="content-card">
-            <h4 class="heading title-decore">Многозадачность</h4>
+            <h3 class="heading title-decore">Многозадачность</h3>
             <p class="content-card__text">
               Как концентрация может снижаться из-за… концентрации? Любая
               стрессовая ситуация (и резко меняющийся мир в целом) заставляет
@@ -125,7 +125,7 @@
             </p>
           </article>
           <article class="content-card">
-            <h4 class="heading title-decore">Еда</h4>
+            <h3 class="heading title-decore">Еда</h3>
             <p class="content-card__text">
               «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
               доставляют в мозг энергию и помогают ему лучше работать. Но уходит
@@ -136,7 +136,7 @@
             </p>
           </article>
           <article class="content-card">
-            <h4 class="heading title-decore">Гаджеты</h4>
+            <h3 class="heading title-decore">Гаджеты</h3>
             <p class="content-card__text">
               Да-да, это та самая ситуация, когда на экране ноутбука — код, в
               наушниках — подкаст, а на компьютере фоном — ещё и видео с
@@ -150,17 +150,17 @@
         </div>
       </section>
 
-      <section class="content-cards two-columns">
+      <section class="content-cards">
         <div class="content-cards__header">
-          <h2 class="heading heading-accent-color">
+          <h2 class="heading heading-accent-color heading-inline-size">
             Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
             секунд)
           </h2>
         </div>
         <div class="content-cards__container">
-          <h4 class="heading title-decore">
+          <h3 class="heading title-decore">
             5 простых (на самом деле не очень) советов
-          </h4>
+          </h3>
           <article class="content-card">
             <h4 class="heading title-decore heading-weight-regular">
               Представьте небо и облака
@@ -233,23 +233,20 @@
       <section class="gallery">
         <h2 class="heading title-decore">А можно в картинках?</h2>
         <ul class="gallery__container">
-          <li class="grid-item img1">
-            <img src="/images/sunset.png" alt="sunset" />
+          <li class="grid-item">
+            <img src="./images/sunset.png" alt="sunset" />
           </li>
-          <li class="grid-item img2">
-            <img src="/images/ice-cream.png" alt="ice-cream" />
+          <li class="grid-item">
+            <img src="./images/ice-cream.png" alt="ice-cream" />
           </li>
-          <li class="grid-item img3">
-            <img src="/images/tape.png" alt="tape" />
+          <li class="grid-item">
+            <img src="./images/tape.png" alt="tape" />
           </li>
-          <li class="grid-item img4">
-            <img src="/images/books.png" alt="books" />
+          <li class="grid-item">
+            <img src="./images/books.png" alt="books" />
           </li>
-          <li class="grid-item img5">
-            <img src="/images/street.png" alt="street" />
-          </li>
-          <li class="grid-item img5">
-            <img src="/images/street.png" alt="street" />
+          <li class="grid-item">
+            <img src="./images/street.png" alt="street" />
           </li>
         </ul>
       </section>
@@ -263,7 +260,7 @@
       class="corner-decore corner-decore-left-down"
       aria-hidden="true"
     ></div>
-    focus
+    <span class="header__title">focus</span>
   </footer>
     <script src="./scripts/script.js"></script>
   </body>
