--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="color-scheme" content="dark light"> 
+    <meta name="color-scheme" content="dark light" />
     <title>Сложно сосредоточиться</title>
     <link rel="icon" href="./images/favicon.ico" sizes="any" />
     <link rel="icon" href="./images/favicon.svg" type="image/svg+xml" />
@@ -12,9 +12,9 @@
     <link rel="stylesheet" href="./fonts/fonts.css" />
     <link rel="stylesheet" href="./styles/globals.css" />
     <link rel="stylesheet" href="./styles/variables.css" />
-    <link rel="stylesheet" href="./styles/style.css"> 
-    <link rel="stylesheet" href="./styles/light.css" /> 
-    <link rel="stylesheet" href="./styles/dark.css"/>
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/light.css" />
+    <link rel="stylesheet" href="./styles/dark.css" />
   </head>
   <body class="page">
     <header class="header decorated-zone">
@@ -253,15 +253,15 @@
     </main>
     <footer class="footer">
       <div
-      class="corner-decore corner-decore-right-up"
-      aria-hidden="true"
-    ></div>
-    <div
-      class="corner-decore corner-decore-left-down"
-      aria-hidden="true"
-    ></div>
-    <span class="header__title">focus</span>
-  </footer>
+        class="corner-decore corner-decore-right-up"
+        aria-hidden="true"
+      ></div>
+      <div
+        class="corner-decore corner-decore-left-down"
+        aria-hidden="true"
+      ></div>
+      <span class="header__title">focus</span>
+    </footer>
     <script src="./scripts/script.js"></script>
   </body>
 </html>
